--- a/test/index.html
+++ b/test/index.html
@@ -9,11 +9,11 @@
 
 	<!-- include helper files here... -->
 	<!--<script src="helpers/h-Object.js"></script>-->
-	<script src="../lib/traceur.js"></script>
+
 
 	<!-- include source files here... -->
-	<script src="../dist/StringAlter.js"></script>
-	<!--<script type="text/traceur" src="../src/StringAlter.js"></script>-->
+	<!--<script src="../dist/StringAlter.js"></script>-->
+	<script type="text/traceur" src="../src/StringAlter.js"></script><script src="../lib/traceur.js"></script>
 
 	<!-- include spec files here... -->
 	<script src="spec/StringAlter.js"></script>
