BUILD script for building es5 version

--- a/test/index.html
+++ b/test/index.html
@@ -12,8 +12,8 @@
 
 
 	<!-- include source files here... -->
-	<!--<script src="../dist/StringAlter.js"></script>-->
-	<script type="text/traceur" src="../src/StringAlter.js"></script><script src="../lib/traceur.js"></script>
+	<script src="../build/es5/StringAlter.js"></script>
+	<!--<script type="text/traceur" src="../src/StringAlter.js"></script><script src="../lib/traceur.js"></script>-->
 
 	<!-- include spec files here... -->
 	<script src="spec/StringAlter.js"></script>
