--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Jasmine Spec Runner</title>
 
-	<link rel="stylesheet" type="text/css" href="http://pivotal.github.io/jasmine/lib/jasmine-1.3.1/jasmine.css">
-	<script src="http://pivotal.github.io/jasmine/lib/jasmine-1.3.1/jasmine.js"></script>
-	<script src="http://pivotal.github.io/jasmine/lib/jasmine-1.3.1/jasmine-html.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://jasmine.github.io/1.3/lib/jasmine.css">
+	<script src="http://jasmine.github.io/1.3/lib/jasmine.js"></script>
+	<script src="http://jasmine.github.io/1.3/lib/jasmine-html.js"></script>
 
 	<!-- include helper files here... -->
 	<!--<script src="helpers/h-Object.js"></script>-->
